--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,60 @@
+@font-face {
+    font-family: Hanken Grotesk;
+    src: url(./assets/fonts/HankenGrotesk-VariableFont_wght.ttf);
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Hanken Grotesk;
+    p::before {
+    content: "Hey";
+    color: red;
 }
+}
+
+
 
 .container1{
 display:flex;
 flex-direction: column;
 justify-content: center;
 }
+
 .upper_part{
-    background: hsl(241, 81%, 54%);
+    background: hsla(241, 81%, 54%, .9);
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
- 
-
-
-
+    /* width: 375px; */
 }
 .lower_part{
     background: hsl(0, 0%, 100%);
+    /* width: 375px; */
+}
+
+/* headings */
+h1, h2 {
+    color: white;
+}
+h3{
+    color:hsl(213, 14%, 63%);
+}
+
+.circle_container{
+    aspect-ratio: 1/1;
+    display: block;
+    width: 25%;
+    height: ;
+
+}
+.result_circle{
+    background: hsla(256, 72%, 46%, 0.7);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    padding-bottom: 30%;
+    position: relative;
     
 }
+
