--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@
 }
 
 
-
 .container1{
 display:flex;
 flex-direction: column;
@@ -79,7 +78,8 @@ h1{
     display:flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: column-reverse;
+    
     
 }
 
