--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,6 @@
     margin: 0;
     padding: 0;
     font-family: Hanken Grotesk;
-    p::before {
-    content: "Hey";
-    color: red;
-}
 }
 
 
@@ -61,25 +57,49 @@ h1{
     font-size: 38px;
 }
 
-.circle_container{
-    aspect-ratio: 1/1;
-    display: block;
-    width: 25%;
-}
-
-
-.result_circle{
+.circle{
+    display: grid;
     background: hsla(256, 72%, 46%, 0.7);
+    grid-template-columns: repeat(3, 100%);
+    grid-template-rows: repeat(3, auto);
+    grid-gap: 1em;
     width: 100%;
-    height: 100%;
+    height:100%;
     border-radius: 50%;
-    padding-bottom: 30%;
-    position: relative;
-    display:flex;
+
+}
+
+.circle_container {
+    aspect-ratio: 1/1;
+    display: flex;
+    width: 25%;
+    border: 10px solid black;
+}
+
+.result_circle_grid_1{
+    grid-column: 1/1;
+    grid-row: 1/1;
     justify-content: center;
-    align-items: center;
-    flex-direction: column-reverse;
-    
+    border: 5px solid red;
     
 }
+
+.result_circle_grid_2{
+    grid-column: 1/1;
+    grid-row: 2/2;
+    /* display: flex; */
+    justify-content: center;
+    align-self: center;
+    border: 5px solid red;
+}
+
+.result_circle_grid_3{
+    grid-column: 1/1;
+    grid-row: 3/3;
+    /* display: flex; */
+    justify-content: center;
+    align-self: top;
+    border: 5px solid red;
+}
+
 
