--- a/styles.css
+++ b/styles.css
@@ -60,46 +60,23 @@ h1{
 .circle{
     display: grid;
     background: hsla(256, 72%, 46%, 0.7);
-    grid-template-columns: repeat(3, 100%);
-    grid-template-rows: repeat(3, auto);
-    grid-gap: 1em;
-    width: 100%;
-    height:100%;
+    grid-auto-columns: 100%;
+    grid-auto-rows: 1fr 1fr 1fr;
+    /* grid-gap: 1em; */
+    width: 15vw;
+    height:15vh;
     border-radius: 50%;
-
-}
-
-.circle_container {
-    aspect-ratio: 1/1;
-    display: flex;
-    width: 25%;
-    border: 10px solid black;
-}
-
-.result_circle_grid_1{
-    grid-column: 1/1;
-    grid-row: 1/1;
-    justify-content: center;
-    border: 5px solid red;
     
 }
 
+.result_circle_grid_1{
+}
+
 .result_circle_grid_2{
-    grid-column: 1/1;
-    grid-row: 2/2;
-    /* display: flex; */
-    justify-content: center;
-    align-self: center;
-    border: 5px solid red;
 }
 
 .result_circle_grid_3{
-    grid-column: 1/1;
-    grid-row: 3/3;
-    /* display: flex; */
-    justify-content: center;
-    align-self: top;
-    border: 5px solid red;
+    display: flex;
 }
 
 
