--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* general */
 @font-face {
     font-family: Hanken Grotesk;
     src: url(./assets/fonts/HankenGrotesk-VariableFont_wght.ttf);
@@ -10,46 +11,31 @@
     font-family: Hanken Grotesk;
 }
 
-
-.container1{
-display:flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-}
-
-.upper_part{
-    background: hsla(241, 81%, 54%, .9);
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    width: 375px;
+.container1 {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-}
-.lower_part{
-    background: hsl(0, 0%, 100%);
-    width: 375px;
 }
 
 /* headings */
-h1, h2 {
+h1,h2 {
     color: white;
     text-align: center;
     font-weight: 700;
     font-size: 18px;
 }
-h3{
-    color:hsl(213, 14%, 63%);
+
+h3 {
+    color: hsl(213, 14%, 63%);
     text-align: center;
     width: 300px;
     font-weight: 500;
     font-size: 16px;
-    
+
 }
 
-h1{
+h1 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,6 +43,42 @@ h1{
     font-size: 38px;
 }
 
+.others_text{
+    width: 80%;
+}
+
+/* upper part general */
+.upper_part{
+    background: hsla(241, 81%, 54%, .9);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    width: 375px;
+    display: grid;
+    grid-template-columns: 35% 30% 35%;
+    grid-template-rows: repeat(auto, 1fr);
+}
+
+.your-result {
+    grid-area: 1/2/1/3;
+    display: flex;
+    justify-content: center;
+}
+
+.great{
+    grid-area: 4/2/4/3;
+    display: flex;
+    justify-content: center;
+}
+
+.others-info{
+    grid-area: 5/1/5/4;
+    display: flex;
+    justify-content: center;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+/* circle element */
 .circle{
     display: grid;
     background: hsla(256, 72%, 46%, 0.7);
@@ -68,14 +90,12 @@ h1{
     
 }
 
-.result_circle_grid_1{
-}
-
-.result_circle_grid_2{
-}
-
 .result_circle_grid_3{
     display: flex;
 }
 
-
+/* lower part */
+.lower_part {
+    background: hsl(0, 0%, 100%);
+    width: 375px;
+}
