--- a/styles.css
+++ b/styles.css
@@ -98,4 +98,61 @@ h1 {
 .lower_part {
     background: hsl(0, 0%, 100%);
     width: 375px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(auto, 1fr);
+    grid-gap: 1em;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.lower_part > div{
+    border: 3px solid black;
+}
+
+.summary_breakdown{
+    border-radius: .8vh;
+}
+
+.summary{
+    grid-area:2/1/2/1;
+    color: black;
+}
+
+.reacting{
+    grid-area: 3/1/3/1;
+    color: hsl(0, 100%, 67%);
+    background: hsla(0, 100%, 67%, 0.2);
+}
+
+.memory{
+    grid-area: 4/1/4/1;
+    color: hsl(39, 100%, 56%);
+    background: hsla(39, 100%, 56%, 0.2);
+}
+
+.verbal{
+    grid-area: 5/1/5/1;
+    color: hsl(166, 100%, 37%);
+    background: hsla(166, 100%, 37%, .2);
+}
+
+
+.visual{
+    grid-area: 6/1/6/1;
+    color: hsl(234, 85%, 45%);
+    background: hsla(234, 85%, 45%, 0.2);
+}
+
+.continue{
+    grid-area: 7/1/7/1;
+    border-radius: 5vh;
+    text-align: center;
+    background-color: black;
+    color:white;
+}
+
+a{
+    text-decoration: none;
+    color: white;
 }
