--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,8 @@ h1 {
     display: grid;
     grid-template-columns: 35% 30% 35%;
     grid-template-rows: repeat(auto, 1fr);
+    grid-row-gap: 1em;;
+    padding:1em
 }
 
 .your-result {
@@ -99,15 +101,24 @@ h1 {
     background: hsl(0, 0%, 100%);
     width: 375px;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(auto, 1fr);
+    grid-auto-columns: 1fr;
+    grid-auto-rows: minmax(2em, auto);
     grid-gap: 1em;
     font-weight: 700;
     font-size: 16px;
+    /* align-items: center; */
 }
 
+/* margins lower part */
+
+.summary_breakdown, .continue, .summary{
+    margin: 0 1rem;
+}
+
+/* other stuff lower part */ 
 .summary_breakdown{
     border-radius: .8vh;
+    padding: 0 2%;
 }
 
 .summary{
@@ -115,16 +126,34 @@ h1 {
     color: black;
 }
 
+.svg, .svg2, .svg3, .svg4 {
+    align-self: center;
+}
+
+.score{
+    justify-self: end;
+    align-self: center;
+}
+
+.summary-name{
+    justify-self: start;
+    align-self: center;
+}
+
 .reacting{
     grid-area: 3/1/3/1;
     color: hsl(0, 100%, 67%);
     background: hsla(0, 100%, 67%, 0.2);
+    display: grid;
+    grid-template-columns: 10% 70% 20%;
 }
 
 .memory{
     grid-area: 4/1/4/1;
     color: hsl(39, 100%, 56%);
     background: hsla(39, 100%, 56%, 0.2);
+    display: grid;
+    grid-template-columns: 10% 70% 20%;
   
 }
 
@@ -132,6 +161,8 @@ h1 {
     grid-area: 5/1/5/1;
     color: hsl(166, 100%, 37%);
     background: hsla(166, 100%, 37%, .2);
+    display: grid;
+    grid-template-columns: 10% 70% 20%;
 }
 
 
@@ -139,14 +170,19 @@ h1 {
     grid-area: 6/1/6/1;
     color: hsl(234, 85%, 45%);
     background: hsla(234, 85%, 45%, 0.2);
+    display: grid;
+    grid-template-columns: 10% 70% 20%;
 }
+
 
 .continue{
     grid-area: 7/1/7/1;
     border-radius: 5vh;
-    text-align: center;
     background-color: black;
     color:white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 a{
