--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,6 @@ h1 {
     border-radius: 50%;
     width: 100px;
     height: 100px;
-    
 }
 
 .result_circle_grid_3{
@@ -102,7 +101,7 @@ h1 {
     width: 375px;
     display: grid;
     grid-auto-columns: 1fr;
-    grid-auto-rows: minmax(2em, auto);
+    grid-auto-rows: minmax(1fr, 2em);
     grid-gap: 1em;
     font-weight: 700;
     font-size: 16px;
@@ -113,6 +112,7 @@ h1 {
 
 .summary_breakdown, .continue, .summary{
     margin: 0 1rem;
+    height: 2em;
 }
 
 /* other stuff lower part */ 
@@ -121,12 +121,17 @@ h1 {
     padding: 0 2%;
 }
 
+.buffer{
+    grid-area: 1/1/1/1;
+    height: 1fr;
+}
+
 .summary{
     grid-area:2/1/2/1;
     color: black;
 }
 
-.svg, .svg2, .svg3, .svg4 {
+.svg1, .svg2, .svg3, .svg4 {
     align-self: center;
 }
 
@@ -145,7 +150,7 @@ h1 {
     color: hsl(0, 100%, 67%);
     background: hsla(0, 100%, 67%, 0.2);
     display: grid;
-    grid-template-columns: 10% 70% 20%;
+    grid-template-columns: 10% 65% 25%;
 }
 
 .memory{
@@ -153,7 +158,7 @@ h1 {
     color: hsl(39, 100%, 56%);
     background: hsla(39, 100%, 56%, 0.2);
     display: grid;
-    grid-template-columns: 10% 70% 20%;
+    grid-template-columns: 10% 65% 25%;
   
 }
 
@@ -162,7 +167,7 @@ h1 {
     color: hsl(166, 100%, 37%);
     background: hsla(166, 100%, 37%, .2);
     display: grid;
-    grid-template-columns: 10% 70% 20%;
+    grid-template-columns: 10% 65% 25%;
 }
 
 
@@ -171,7 +176,7 @@ h1 {
     color: hsl(234, 85%, 45%);
     background: hsla(234, 85%, 45%, 0.2);
     display: grid;
-    grid-template-columns: 10% 70% 20%;
+    grid-template-columns: 10% 65% 25%;
 }
 
 
