--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ h1 {
     display: grid;
     grid-template-columns: 35% 30% 35%;
     grid-template-rows: repeat(auto, 1fr);
-    grid-row-gap: 1em;;
+    grid-row-gap: 0.8em;
 }
 
 .your-result {
