--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ h1 {
     grid-template-columns: 35% 30% 35%;
     grid-template-rows: repeat(auto, 1fr);
     grid-row-gap: 0.7em;
+    padding-top: .5em;;
 }
 
 .your-result {
