--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@
     font-family: Hanken Grotesk;
 }
 
+/* MOBILE */
+
 .container1 {
     display: flex;
     flex-direction: column;
@@ -115,6 +117,11 @@ h1 {
     height: 2em;
 }
 
+.summary_breakdown:hover, .continue:hover{
+    background:hsla(241, 81%, 54%, .9);
+}
+
+
 /* other stuff lower part */ 
 .summary_breakdown{
     border-radius: .8vh;
@@ -193,4 +200,12 @@ h1 {
 a{
     text-decoration: none;
     color: white;
+}
+
+/* DESKTOP */
+
+@media screen and (min-width:1024px){
+    body{
+        background: red;
+    }
 }
