--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,9 @@
 /* MOBILE */
 
 .container1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: grid;
     align-items: center;
+    justify-content: center;
 }
 
 /* headings */
@@ -205,7 +204,12 @@ a{
 /* DESKTOP */
 
 @media screen and (min-width:1024px){
-    body{
-        background: red;
+   .container1 {
+                display: grid;
+                grid-template-areas: 
+                'upper_part lower_part';
+                grid-template-rows: 100vh;
+                align-items: center;
+                justify-items: center;
+            }
     }
-}
