--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* general */
 @font-face {
     font-family: Hanken Grotesk;
     src: url(./assets/fonts/HankenGrotesk-VariableFont_wght.ttf);
@@ -8,52 +9,35 @@
     margin: 0;
     padding: 0;
     font-family: Hanken Grotesk;
-    p::before {
-    content: "Hey";
-    color: red;
-}
 }
 
+/* MOBILE */
 
-.container1{
-display:flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-}
-
-.upper_part{
-    background: hsla(241, 81%, 54%, .9);
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    width: 375px;
-    display: flex;
-    justify-content: center;
+.container1 {
+    display: grid;
     align-items: center;
-    flex-direction: column;
-}
-.lower_part{
-    background: hsl(0, 0%, 100%);
-    width: 375px;
+    justify-content: center;
 }
 
 /* headings */
-h1, h2 {
+h1,
+h2 {
     color: white;
     text-align: center;
     font-weight: 700;
     font-size: 18px;
 }
-h3{
-    color:hsl(213, 14%, 63%);
+
+h3 {
+    color: hsl(213, 5%, 67%);
     text-align: center;
     width: 300px;
     font-weight: 500;
-    font-size: 18px;
-    
+    font-size: 16px;
+
 }
 
-h1{
+h1 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,25 +45,315 @@ h1{
     font-size: 38px;
 }
 
-.circle_container{
-    aspect-ratio: 1/1;
-    display: block;
-    width: 25%;
+.others_text {
+    width: 80%;
 }
 
+/* upper part general */
+.upper_part {
+    background: rgb(75, 73, 204);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    width: 375px;
+    display: grid;
+    grid-template-columns: 35% 30% 35%;
+    grid-template-rows: repeat(auto, 1fr);
+    grid-row-gap: 0.7em;
+    padding-top: .5em;
+    ;
+}
 
-.result_circle{
-    background: hsla(256, 72%, 46%, 0.7);
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    padding-bottom: 30%;
-    position: relative;
-    display:flex;
+.your-result {
+    grid-area: 1/2/1/3;
+    display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column-reverse;
-    
-    
 }
 
+.great {
+    grid-area: 4/2/4/3;
+    display: flex;
+    justify-content: center;
+}
+
+.others-info {
+    grid-area: 5/1/5/4;
+    display: flex;
+    justify-content: center;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+/* circle element */
+.circle {
+    display: grid;
+    background: hsla(256, 72%, 46%, 0.7);
+    grid-auto-columns: 100%;
+    grid-auto-rows: 1fr 1fr 1fr;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+
+.result_circle_grid_3 {
+    display: flex;
+}
+
+/* lower part */
+.lower_part {
+    background: hsl(0, 0%, 100%);
+    width: 375px;
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-auto-rows: minmax(1fr, 2em);
+    grid-gap: 0.9em;
+    font-weight: 700;
+    font-size: 16px;
+    /* align-items: center; */
+}
+
+/* margins lower part */
+
+.summary_breakdown,
+.continue,
+.summary {
+    margin: 0 1rem;
+    height: 2em;
+}
+
+.summary_breakdown:hover,
+.continue:hover {
+    background: hsla(241, 81%, 54%, .9);
+}
+
+
+/* other stuff lower part */
+.summary_breakdown {
+    border-radius: .8vh;
+    padding: 0 2%;
+}
+
+.buffer {
+    grid-area: 1/1/1/1;
+    height: 1fr;
+}
+
+.summary {
+    grid-area: 2/1/2/1;
+    color: black;
+}
+
+.svg1,
+.svg2,
+.svg3,
+.svg4 {
+    align-self: center;
+}
+
+.score {
+    display: grid;
+    align-self: center;
+    grid-template-columns: 25px 43px;
+    grid-template-areas: "actual-score total-score"
+}
+
+.actual-score {
+    color: hsl(234, 88%, 7%);
+}
+
+.total-score {
+    color: hsl(213, 14%, 63%);
+}
+
+.summary-name {
+    justify-self: start;
+    align-self: center;
+}
+
+.reacting {
+    grid-area: 3/1/3/1;
+    color: hsl(0, 100%, 67%);
+    background: hsla(0, 100%, 67%, 0.2);
+    display: grid;
+    grid-template-columns: 10% 65% 25%;
+    height: 47px;
+}
+
+.memory {
+    grid-area: 4/1/4/1;
+    color: hsl(39, 100%, 56%);
+    background: hsla(39, 100%, 56%, 0.2);
+    display: grid;
+    grid-template-columns: 10% 65% 25%;
+    height: 47px;
+
+}
+
+.verbal {
+    grid-area: 5/1/5/1;
+    color: hsl(166, 100%, 37%);
+    background: hsla(166, 100%, 37%, .2);
+    display: grid;
+    grid-template-columns: 10% 65% 25%;
+    height: 47px;
+}
+
+
+.visual {
+    grid-area: 6/1/6/1;
+    color: hsl(234, 85%, 45%);
+    background: hsla(234, 85%, 45%, 0.2);
+    display: grid;
+    grid-template-columns: 10% 65% 25%;
+    height: 47px;
+}
+
+
+.continue {
+    grid-area: 7/1/7/1;
+    border-radius: 5vh;
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 47px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+/* DESKTOP */
+
+@media screen and (min-width:1024px) {
+    .container1 {
+        display: grid;
+        grid-template-areas:
+            'upper_part lower_part';
+        grid-template-rows: 100vh;
+        align-items: center;
+        justify-items: center;
+
+    }
+
+    .upper_part {
+        width: 265px;
+        height: 367px;
+        z-index: 1;
+        border-radius: 15px;
+        grid-template-columns: 55px 155px 55px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .lower_part {
+        width: 265px;
+        height: 367px;
+        box-shadow: -25px 0 0 white;
+        border-radius: 15px;
+        grid-auto-rows: 50px;
+        grid-gap: 10px;
+        box-shadow: 15px 10px 5px hsla(241, 72%, 49%, 0.1);
+    }
+
+    .circle {
+        display: grid;
+        background: hsla(256, 72%, 46%, 0.7);
+        grid-auto-columns: 100%;
+        grid-auto-rows: 1fr 1fr 1fr;
+        border-radius: 50%;
+        width: 155px;
+        height: 155px;
+    }
+
+
+    /* headings */
+
+    h1 {
+        color: white;
+        font-weight: 700;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 800;
+        font-size: 50px;
+    }
+
+    h2 {
+        color: white;
+        text-align: center;
+        font-weight: 700;
+        font-size: 24px;
+    }
+
+    h3 {
+        color: hsl(213, 14%, 63%);
+        text-align: center;
+        width: 300px;
+        font-weight: 500;
+        font-size: 15px;
+
+    }
+
+    /* other stuff lower part */
+
+    .buffer {
+        display: none;
+    }
+
+    .summary {
+        grid-area: 1/1/1/1;
+        color: black;
+        padding-top: 10px;
+    }
+
+    .score {
+        display: grid;
+        grid-template-columns: 25px 43px;
+        grid-template-areas: "actual-score total-score"
+    }
+
+    .actual-score {
+        color: hsl(234, 88%, 7%);
+    }
+
+    .total-score {
+        color: hsl(213, 14%, 63%);
+    }
+
+    .reacting {
+        grid-area: 2/1/2/1;
+        grid-template-areas: "svg1 summary-name score";
+
+        grid-template-columns: 25px 100px 93px;
+        height: 47px;
+    }
+
+    .memory {
+        grid-area: 3/1/3/1;
+        grid-template-columns: 25px 100px 93px;
+        height: 47px;
+    }
+
+    .verbal {
+        grid-area: 4/1/4/1;
+        grid-template-columns: 25px 100px 93px;
+        height: 47px;
+    }
+
+
+    .visual {
+        grid-area: 5/1/5/1;
+        grid-template-columns: 25px 100px 93px;
+        height: 47px;
+    }
+
+    .continue {
+        grid-area: 6/1/6/1;
+        height: 47px;
+    }
+
+}
+
+/* asd */
